# Attention-Residuals

./: README.md  pyproject.toml
assets/: attnres_bmc.pptx  attnres_business_case.docx  attnres_business_problem.docx
config/: base.yaml  full_attnres.yaml  shakespeare.yaml  tinystories.yaml
dataset/: __init__.py  base_dataset.py  image_datasets.py  shakespeare_dataset.py  tinystories_dataset.py  tokenizer.py
frontend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/app/: auth.py  config.py  main.py  model_registry.py
frontend/app/routers/: api.py  pages.py
frontend/app/static/css/: style.css
frontend/app/static/js/: app.js
frontend/app/templates/: index.html
frontend/tests/: test_api.py
inference/: inference.py  inference_lm.py
models/: __init__.py  attn_res.py  components.py  lm_transformer.py  transformer.py
notebooks/: attnres_comparison.ipynb
tests/: test_attn_res.py  test_components.py  test_kv_cache.py  test_shakespeare.py  test_tinystories.py  test_tracker.py  test_transformer.py  test_utils.py
train/: train.py  train_lm.py
utils/: __init__.py  checkpoint.py  config.py  device.py  logger.py  tracker.py
visualization/: compare_models.py  plot_logs.py
