[project]
name = "attnres"
version = "0.1.0"
description = "Attention Residuals (AttnRes) — PyTorch implementation of MoonshotAI/Attention-Residuals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jibran", email = "jibran.ijaz@gmail.com" }]

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    # Text / language-modelling support
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
attnres-train    = "train.train:main"
attnres-infer    = "inference.inference:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "models",
    "utils",
    "dataset",
    "visualization",
    "train",
    "inference",
    "config",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
